# tofu-pov-arxiv

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: diagnose_pslb_tofu_gap.py  diagnose_text_product_context.py  make_cnn_image_plots.py  make_image_classification_plots.py  make_movielens_plots.py  make_paper_plots.py  make_real_feature_synthetic_plots.py  make_real_world_plots.py  make_text_product_context_plots.py  probe_rank_diagnostics.py  run_cnn_image_experiments.py  run_image_classification_experiments.py  run_main_plot_experiments.py  run_movielens_experiments.py  run_rank_adaptation_experiments.py  run_real_feature_synthetic_experiments.py  run_real_world_experiments.py  run_synthetic_benchmarks.py  run_text_product_context_experiments.py
results/cnn_image_fair_mnist_m4_d100/: cnn_image_calibration.csv  cnn_image_rank_selection.csv  cnn_image_selections.csv  cnn_image_summary.csv  (+1 more)
tests/: test_cnn_image_bandit.py  test_experiments.py  test_image_classification.py  test_imputation.py  test_learner.py  test_movielens.py  test_oful.py  test_oful_beta_scale.py  test_plotting.py  test_pslb.py  test_real_feature_synthetic.py  test_real_feature_synthetic_scripts.py  test_real_world_datasets.py  test_real_world_scripts.py  test_subspace.py  test_text_product_context.py
tofu_pov/: __init__.py  baselines.py  calibration.py  cnn_image_bandit.py  config.py  envs.py  experiments.py  image_bandit.py  imputation.py  learner.py  movielens.py  oful.py  product_context_text.py  real_feature_synthetic.py  real_world.py  real_world_datasets.py  subspace.py
(+10 files in other folders)
