[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tofu-pov"
version = "0.1.0"
description = "Standalone NumPy implementation of epoch-wise TOFU-POV bandits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
plots = [
  "matplotlib>=3.7",
  "pandas>=1.5",
  "seaborn>=0.12",
]
real_world = [
  "scikit-learn>=1.3",
]
cnn = [
  "scikit-learn>=1.3",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
include = ["tofu_pov*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
